# robotfootball

./: .gitignore  KANBAN.md  README.md
.claude/: settings.json
client/: index.html
client/src/: devpanel.ts  hud.ts  input.ts  interp.ts  main.ts  net.ts  render.ts  style.css
docs/: 00-개요-및-게임설계.md  01-UX-화면구성.md  02-네트워크-프로토콜.md  03-개발환경.md  04-동작환경.md  05-개발프로세스.md  06-포트폴리오-전략.md  07-결정기록-ADR.md  08-future-backlog.md  09-AI-설계.md  10-점검-프롬프트.md  11-진행상태-핸드오프.md  robot-soccer-포트폴리오-브레인스토밍.md
docs/superpowers/plans/: 2026-07-03-walking-skeleton.md  2026-07-08-combat-damage.md  2026-07-08-combat-effects.md  2026-07-08-interactivity.md  2026-07-08-parts-loadout.md  2026-07-08-physics-collision.md
docs/superpowers/specs/: 2026-07-14-defender-ai-positioning-design.md
server/: .gitignore  Cargo.toml
server/src/: accumulator.rs  combat.rs  control.rs  human.rs  loop_runner.rs  main.rs  net.rs  parts.rs  physics.rs  replay.rs  session.rs  stamina.rs  world.rs
