[package]
name = "simplectrl_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rapier2d = { version = "0.26", features = ["enhanced-determinism"] }
